--- a/BBLibraryApp/appsettings.json
+++ b/BBLibraryApp/appsettings.json
@@ -6,9 +6,9 @@
   "EmailSettings": {
     "MailServer": "smtp.gmail.com",
     "MailPort": 465,
-    "SenderName": "<Your_Name>",
-    "Sender": "<Your_Gmail_address>",
-    "Password": "<Your_Gmail_Password>"
+    "SenderName": "Your_Name",
+    "Sender": "Your_Gmail_address",
+    "Password": "Your_Gmail_Password"
   },
   "Logging": {
     "LogLevel": {
